dev/clusters/kind-macula-hub/apps/neurolab/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neurolab
  namespace: macula
spec:
  type: ClusterIP
  selector:
    app: neurolab
  ports:
  - name: http
    port: 80
    targetPort: 4000
    protocol: TCP
